--- a/samples/advanced/package.json
+++ b/samples/advanced/package.json
@@ -21,7 +21,7 @@
     "@angular/common": "^13.0.0",
     "@angular/compiler": "^13.0.0",
     "@angular/core": "^13.0.0",
-    "@angular/fire": "../../dist/packages-dist",
+    "@angular/fire": "^18.0.1",
     "@angular/forms": "^13.0.0",
     "@angular/platform-browser": "^13.0.0",
     "@angular/platform-browser-dynamic": "^13.0.0",
