--- a/samples/advanced/angular.json
+++ b/samples/advanced/angular.json
@@ -166,7 +166,8 @@
             "development": {
               "optimization": false,
               "sourceMap": true,
-              "extractLicenses": false
+              "extractLicenses": false,
+              "vendorChunk": true
             }
           },
           "defaultConfiguration": "production"
