--- a/samples/advanced/angular.json
+++ b/samples/advanced/angular.json
@@ -148,7 +148,8 @@
             "optimization": false,
             "sourceMap": true,
             "extractLicenses": false,
-            "externalDependencies": []
+            "externalDependencies": [],
+            "buildOptimizer": false
           },
           "configurations": {
             "production": {
@@ -167,7 +168,8 @@
               "optimization": false,
               "sourceMap": true,
               "extractLicenses": false,
-              "vendorChunk": true
+              "vendorChunk": true,
+              "buildOptimizer": false
             }
           },
           "defaultConfiguration": "production"
