--- a/samples/advanced/package.json
+++ b/samples/advanced/package.json
@@ -10,27 +10,24 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
-    "dev:ssr": "cd ../.emulator && firebase emulators:exec --import seed \"cd ../advanced && ng run sample:serve-ssr\"",
-    "serve:ssr": "node dist/sample/server/main.js",
-    "build:ssr": "ng build && ng run sample:server",
-    "prerender": "ng run sample:prerender"
+    "serve:ssr:sample": "node dist/sample/server/server.mjs"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.11",
-    "@angular/common": "^17.3.11",
-    "@angular/compiler": "^17.3.11",
-    "@angular/core": "^17.3.11",
+    "@angular/animations": "^18.0.2",
+    "@angular/common": "^18.0.2",
+    "@angular/compiler": "^18.0.2",
+    "@angular/core": "^18.0.2",
     "@angular/fire": "^18.0.1",
-    "@angular/forms": "^17.3.11",
-    "@angular/platform-browser": "^17.3.11",
-    "@angular/platform-browser-dynamic": "^17.3.11",
-    "@angular/platform-server": "^17.3.11",
-    "@angular/router": "^17.3.11",
-    "@angular/service-worker": "^17.3.11",
-    "@angular/ssr": "^17.3.8",
+    "@angular/forms": "^18.0.2",
+    "@angular/platform-browser": "^18.0.2",
+    "@angular/platform-browser-dynamic": "^18.0.2",
+    "@angular/platform-server": "^18.0.2",
+    "@angular/router": "^18.0.2",
+    "@angular/service-worker": "^18.0.2",
+    "@angular/ssr": "^18.0.3",
     "cross-fetch": "^3.1.4",
-    "express": "^4.15.2",
+    "express": "^4.18.2",
     "firebase-admin": "^10.0.2",
     "lodash.isequal": "^4.5.0",
     "rxjs": "~6.6.0",
@@ -39,11 +36,11 @@
     "zone.js": "~0.14.7"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1703.8",
-    "@angular-devkit/build-angular": "^17.3.8",
-    "@angular/cli": "^17.3.8",
-    "@angular/compiler-cli": "^17.3.11",
-    "@types/express": "^4.17.0",
+    "@angular-devkit/architect": "^0.1800.3",
+    "@angular-devkit/build-angular": "^18.0.3",
+    "@angular/cli": "^18.0.3",
+    "@angular/compiler-cli": "^18.0.2",
+    "@types/express": "^4.17.17",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "ajv-formats": "^2.1.1",
@@ -58,7 +55,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^17.3.0",
+    "ng-packagr": "^18.0.0",
     "ts-mixer": "^6.0.0",
     "ts-node": "~9.1.1",
     "tslint": "~6.1.3",
