--- a/samples/advanced/tsconfig.app.json
+++ b/samples/advanced/tsconfig.app.json
@@ -9,9 +9,7 @@
   },
   "files": [
     "src/main.ts",
-    "src/polyfills.ts",
-    "src/main.server.ts",
-    "server.ts"
+    "src/polyfills.ts"
   ],
   "include": [
     "src/**/*.d.ts"
